--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.12.7",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.2",
     "react": "^18.2.0",
